<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="60dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="Jahangirnagar University"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            app:srcCompat="@drawable/logo1" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/black"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="40dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:text="@string/id" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/program" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/black"
        android:layout_weight="0" />

<!--    <TextView-->
<!--        android:id="@+id/textView5"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:textSize="20dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:onClick="call"-->
<!--        android:clickable="true"-->
<!--        android:text="@string/phone" />-->

    <Button
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/black"
        android:text="@string/btnCall"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/address" />

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/black"
        android:layout_weight="0" />





</LinearLayout>